--- a/TODO
+++ b/TODO
@@ -1,5 +1,35 @@
 == TODO
 
+cherry:~...Staging/spherechat >> sink ../../Distribution .
+00    [+] .gitignore
+01    [+] backup
+02 [=][>] demo.conf
+03 [=][>] demo.html
+04 [=] !  spherechat.html
+05 [=][>] spherechat.zip
+06    [+] start-server
+07    [+] stop-server
+08    [+] backups/.keep
+09 [=][>] lib/js/spherechat-bundle.js
+10 [=][>] lib/js/spherechat.js
+
+cherry:~...Staging/spherechat >> sink . ../../Distribution
+00 [=] !  .gitignore
+01 [=] !  backup
+02 [=][<] demo.conf
+03 [=][<] demo.html
+04    [+] spherechat.html
+05 [=][<] spherechat.zip
+06 [=] !  start-server
+07 [=] !  stop-server
+08 [=] !  backups/.keep
+09 [=][<] lib/js/spherechat-bundle.js
+10 [=][<] lib/js/spherechat.js
+
+# I don't get the meaning of [=] here, and besides I'm pretty sure that the files
+# are the same, except for lib/js/*
+
+========
 
 - Add the possibility to track changes between more than one directory
 - Make benchmarks
